bench/tests/plans/snapshots/r#mod__plans__wind_farm__Wind Farm - ProductionQuery4 (Execution Plan, ObjectId).snap
---
source: bench/tests/plans/wind_farm.rs
expression: "&string"
---
DecodeObjectIdsExec: projections=[decode(site_label__oid) as site_label, decode(wtur_label__oid) as wtur_label, decode(t__oid) as t, decode(val__oid) as val]
  HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(dp__oid@2, dp__oid@0)], projection=[site_label__oid@0, wtur_label__oid@1, t__oid@3, val__oid@5]
    HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(dp__oid@2, dp__oid@0)], projection=[site_label__oid@0, wtur_label__oid@1, dp__oid@2, t__oid@4]
      HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(ts__oid@2, ts__oid@0)], projection=[site_label__oid@0, wtur_label__oid@1, dp__oid@4]
        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(ts__oid@2, ts__oid@0)], projection=[site_label__oid@0, wtur_label__oid@1, ts__oid@2]
          HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(generator__oid@2, generator__oid@0)], projection=[site_label__oid@0, wtur_label__oid@1, ts__oid@4]
            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(generator__oid@2, generator__oid@0)], projection=[site_label__oid@0, wtur_label__oid@1, generator__oid@2]
              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(generator_asp__oid@2, generator_asp__oid@1)], projection=[site_label__oid@0, wtur_label__oid@1, generator__oid@3]
                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(gensys__oid@2, gensys__oid@0)], projection=[site_label__oid@0, wtur_label__oid@1, generator_asp__oid@4]
                  HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(gensys__oid@2, gensys__oid@0)], projection=[site_label__oid@0, wtur_label__oid@1, gensys__oid@2]
                    HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(gensys_asp__oid@2, gensys_asp__oid@1)], projection=[site_label__oid@0, wtur_label__oid@1, gensys__oid@3]
                      HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(wtur__oid@2, wtur__oid@0)], projection=[site_label__oid@0, wtur_label__oid@1, gensys_asp__oid@3]
                        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(wtur__oid@2, wtur__oid@0)], projection=[site_label__oid@0, wtur_label__oid@1, wtur__oid@2, gensys_asp__oid@4]
                          HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(wtur_asp__oid@1, wtur_asp__oid@1)], projection=[site_label__oid@0, wtur_label__oid@2, wtur__oid@3]
                            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(wtur_asp__oid@1, wtur_asp__oid@0)], projection=[site_label__oid@0, wtur_asp__oid@1, wtur_label__oid@3]
                              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(site__oid@0, site__oid@0)], projection=[site_label__oid@1, wtur_asp__oid@3]
                                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(site__oid@0, site__oid@0)], projection=[site__oid@0, site_label__oid@2]
                                  ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?site <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://github.com/magbak/chrontext/rds_power#Site>], blank_node_mode=Variable, file_groups={1 group: [[databases/wind-farm-4/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as site__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 56 AND object@3 = 66, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 56 AND 56 <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= 66 AND 66 <= object_max@6, required_guarantees=[object in (66), predicate in (56)]
                                  ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?site <http://www.w3.org/2000/01/rdf-schema#label> ?site_label], blank_node_mode=Variable, file_groups={1 group: [[databases/wind-farm-4/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as site__oid, object@3 as site_label__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 57 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 57 AND 57 <= predicate_max@2, required_guarantees=[predicate in (57)]
                                ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?site <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect> ?wtur_asp], blank_node_mode=Variable, file_groups={1 group: [[databases/wind-farm-4/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as site__oid, object@3 as wtur_asp__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 63 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 63 AND 63 <= predicate_max@2, required_guarantees=[predicate in (63)]
                              ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?wtur_asp <http://www.w3.org/2000/01/rdf-schema#label> ?wtur_label], blank_node_mode=Variable, file_groups={1 group: [[databases/wind-farm-4/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as wtur_asp__oid, object@3 as wtur_label__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 57 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 57 AND 57 <= predicate_max@2, required_guarantees=[predicate in (57)]
                            ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?wtur <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode> ?wtur_asp], blank_node_mode=Variable, file_groups={1 group: [[databases/wind-farm-4/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as wtur__oid, object@3 as wtur_asp__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 64 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 64 AND 64 <= predicate_max@2, required_guarantees=[predicate in (64)]
                          ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?wtur <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect> ?gensys_asp], blank_node_mode=Variable, file_groups={1 group: [[databases/wind-farm-4/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as wtur__oid, object@3 as gensys_asp__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 63 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 63 AND 63 <= predicate_max@2, required_guarantees=[predicate in (63)]
                        ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?wtur <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://github.com/magbak/chrontext/rds_power#A>], blank_node_mode=Variable, file_groups={1 group: [[databases/wind-farm-4/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as wtur__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 56 AND object@3 = 71 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 56 AND 56 <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= 71 AND 71 <= object_max@6, required_guarantees=[object in (71), predicate in (56)]
                      ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?gensys <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode> ?gensys_asp], blank_node_mode=Variable, file_groups={1 group: [[databases/wind-farm-4/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as gensys__oid, object@3 as gensys_asp__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 64 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 64 AND 64 <= predicate_max@2, required_guarantees=[predicate in (64)]
                    ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?gensys <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://github.com/magbak/chrontext/rds_power#RA>], blank_node_mode=Variable, file_groups={1 group: [[databases/wind-farm-4/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as gensys__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 56 AND object@3 = 87 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 56 AND 56 <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= 87 AND 87 <= object_max@6, required_guarantees=[object in (87), predicate in (56)]
                  ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?gensys <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect> ?generator_asp], blank_node_mode=Variable, file_groups={1 group: [[databases/wind-farm-4/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as gensys__oid, object@3 as generator_asp__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 63 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 63 AND 63 <= predicate_max@2, required_guarantees=[predicate in (63)]
                ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?generator <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode> ?generator_asp], blank_node_mode=Variable, file_groups={1 group: [[databases/wind-farm-4/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as generator__oid, object@3 as generator_asp__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 64 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 64 AND 64 <= predicate_max@2, required_guarantees=[predicate in (64)]
              ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?generator <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://github.com/magbak/chrontext/rds_power#GAA>], blank_node_mode=Variable, file_groups={1 group: [[databases/wind-farm-4/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as generator__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 56 AND object@3 = 89 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 56 AND 56 <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= 89 AND 89 <= object_max@6, required_guarantees=[object in (89), predicate in (56)]
            ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?generator <https://github.com/magbak/chrontext#hasTimeseries> ?ts], blank_node_mode=Variable, file_groups={1 group: [[databases/wind-farm-4/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as generator__oid, object@3 as ts__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 65 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 65 AND 65 <= predicate_max@2, required_guarantees=[predicate in (65)]
          ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?ts <http://www.w3.org/2000/01/rdf-schema#label> "Production"], blank_node_mode=Variable, file_groups={1 group: [[databases/wind-farm-4/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as ts__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 57 AND object@3 = 95 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 57 AND 57 <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= 95 AND 95 <= object_max@6, required_guarantees=[object in (95), predicate in (57)]
        ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?ts <https://github.com/magbak/chrontext#hasDataPoint> ?dp], blank_node_mode=Variable, file_groups={1 group: [[databases/wind-farm-4/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as ts__oid, object@3 as dp__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 2854 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 2854 AND 2854 <= predicate_max@2, required_guarantees=[predicate in (2854)]
      ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?dp <https://github.com/magbak/chrontext#hasTimestamp> ?t], blank_node_mode=Variable, file_groups={1 group: [[databases/wind-farm-4/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as dp__oid, object@3 as t__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 2852 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 2852 AND 2852 <= predicate_max@2, required_guarantees=[predicate in (2852)]
    ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?dp <https://github.com/magbak/chrontext#hasValue> ?val], blank_node_mode=Variable, file_groups={1 group: [[databases/wind-farm-4/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as dp__oid, object@3 as val__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 2853 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 2853 AND 2853 <= predicate_max@2, required_guarantees=[predicate in (2853)]
