bench/tests/plans/snapshots/r#mod__plans__wind_farm__Wind Farm - ProductionQuery4 (Execution Plan, Plain Term).snap
---
source: bench/tests/plans/wind_farm.rs
expression: "&string"
---
ProjectionExec: expr=[site_label@0 as site_label, wtur_label@1 as wtur_label, t@3 as t, val@2 as val]
  HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(dp@2, dp@0)], projection=[site_label@0, wtur_label@1, val@3, t@5]
    HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(dp@2, dp@0)], projection=[site_label@0, wtur_label@1, dp@2, val@4]
      HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(ts@2, ts@0)], projection=[site_label@0, wtur_label@1, dp@4]
        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(ts@2, ts@0)], projection=[site_label@0, wtur_label@1, ts@2]
          HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(generator@2, generator@0)], projection=[site_label@0, wtur_label@1, ts@4]
            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(generator@2, generator@0)], projection=[site_label@0, wtur_label@1, generator@2]
              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(generator_asp@2, generator_asp@1)], projection=[site_label@0, wtur_label@1, generator@3]
                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(gensys@2, gensys@0)], projection=[site_label@0, wtur_label@1, generator_asp@4]
                  HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(gensys@2, gensys@0)], projection=[site_label@0, wtur_label@1, gensys@2]
                    HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(gensys_asp@2, gensys_asp@1)], projection=[site_label@0, wtur_label@1, gensys@3]
                      HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(wtur@2, wtur@0)], projection=[site_label@0, wtur_label@1, gensys_asp@3]
                        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(wtur@2, wtur@0)], projection=[site_label@0, wtur_label@1, wtur@2, gensys_asp@4]
                          HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(wtur_asp@1, wtur_asp@1)], projection=[site_label@0, wtur_label@2, wtur@3]
                            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(wtur_asp@1, wtur_asp@0)], projection=[site_label@0, wtur_asp@1, wtur_label@3]
                              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(site@0, site@0)], projection=[site_label@1, wtur_asp@3]
                                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(site@0, site@0)], projection=[site@0, site_label@2]
                                  DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?site <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://github.com/magbak/chrontext/rds_power#Site>], blank_node_mode=Variable
                                  FilterExec: DynamicFilter [ empty ]
                                    DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?site <http://www.w3.org/2000/01/rdf-schema#label> ?site_label], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ empty ]]
                                FilterExec: DynamicFilter [ empty ]
                                  DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?site <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect> ?wtur_asp], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ empty ]]
                              FilterExec: DynamicFilter [ empty ]
                                DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?wtur_asp <http://www.w3.org/2000/01/rdf-schema#label> ?wtur_label], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ empty ]]
                            FilterExec: DynamicFilter [ empty ]
                              DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?wtur <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode> ?wtur_asp], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ empty ]]
                          FilterExec: DynamicFilter [ empty ]
                            DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?wtur <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect> ?gensys_asp], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ empty ]]
                        FilterExec: DynamicFilter [ empty ]
                          DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?wtur <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://github.com/magbak/chrontext/rds_power#A>], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ empty ]]
                      FilterExec: DynamicFilter [ empty ]
                        DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?gensys <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode> ?gensys_asp], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ empty ]]
                    FilterExec: DynamicFilter [ empty ]
                      DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?gensys <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://github.com/magbak/chrontext/rds_power#RA>], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ empty ]]
                  FilterExec: DynamicFilter [ empty ]
                    DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?gensys <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect> ?generator_asp], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ empty ]]
                FilterExec: DynamicFilter [ empty ]
                  DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?generator <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode> ?generator_asp], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ empty ]]
              FilterExec: DynamicFilter [ empty ]
                DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?generator <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://github.com/magbak/chrontext/rds_power#GAA>], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ empty ]]
            FilterExec: DynamicFilter [ empty ]
              DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?generator <https://github.com/magbak/chrontext#hasTimeseries> ?ts], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ empty ]]
          FilterExec: DynamicFilter [ empty ]
            DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?ts <http://www.w3.org/2000/01/rdf-schema#label> "Production"], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ empty ]]
        FilterExec: DynamicFilter [ empty ]
          DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?ts <https://github.com/magbak/chrontext#hasDataPoint> ?dp], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ empty ]]
      FilterExec: DynamicFilter [ empty ]
        DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?dp <https://github.com/magbak/chrontext#hasValue> ?val], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ empty ]]
    FilterExec: DynamicFilter [ empty ]
      DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?dp <https://github.com/magbak/chrontext#hasTimestamp> ?t], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ empty ]]
